--- a/dynatrace-operator/chart/default/templates/Common/webhook/deployment-webhook.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/webhook/deployment-webhook.yaml
@@ -85,6 +85,9 @@ spec:
             limits:
               cpu: {{ .Values.webhook.limits.cpu }}
               memory: {{ .Values.webhook.limits.memory }}
+      {{- if .Values.webhook.hostNetwork }}
+      hostNetwork: true
+      {{- end }}
       serviceAccountName: dynatrace-webhook
       {{- if .Values.operator.customPullSecret }}
       imagePullSecrets:
