add tolerations for webhook

--- a/dynatrace-operator/chart/default/templates/Common/webhook/deployment-webhook.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/webhook/deployment-webhook.yaml
@@ -90,6 +90,6 @@ spec:
       imagePullSecrets:
         - name: {{ .Values.operator.customPullSecret }}
       {{- end }}
-      {{- if .Values.operator.tolerations }}
+      {{- if .Values.webhook.tolerations }}
       tolerations: {{- toYaml .Values.webhook.tolerations | nindent 8 }}
       {{- end -}}
