--- a/dynatrace-operator/chart/default/templates/Common/secret.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/secret.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes, openshift, google" (include "dynatrace-operator.platformSet" .))}}
-{{- if .Values.autoCreateSecret }}
+{{- if .Values.autoCreateSecret.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
