Adding annotations option to dynatrace-kubernetes-monitoring service account

--- a/dynatrace-operator/chart/default/templates/Common/kubernetes-monitoring/serviceaccount-kubernetes-monitoring.yaml
+++ b/dynatrace-operator/chart/default/templates/Common/kubernetes-monitoring/serviceaccount-kubernetes-monitoring.yaml
@@ -19,3 +19,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "dynatrace-operator.labels" . | nindent 4 }}
+  {{- if .Values.serviceAccounts.dynatraceKubernetesMonitoring.annotations }} # optionally add annotations for SA - useful for setting AWS IAM roles
+  annotations:
+    {{- .Values.serviceAccounts.dynatraceKubernetesMonitoring.annotations | toYaml | nindent 4 }}
+  {{- end -}}
